pkg/objects/SimilarEmployeeProfile__c.object
<CustomObject>
    <description>Objeto responsável por gerenciar perfis semelhantes dos funcionários.</description>
    <fields>
        <fullName>Function__c</fullName>
        <description>Lista de opção de funções do perfil semelhante.</description>
        <inlineHelpText>Função dos funcionários</inlineHelpText>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Funcao</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SimilarEmployee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relacionamento de pesquisa funcionário semelhante</description>
        <inlineHelpText>Funcionário similar</inlineHelpText>
        <label>Similar Employee</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Funcionário semelhante não pode ser o mesmo do funcionário de origem.</errorMessage>
            <filterItems>
                <field>Employee__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.SourceEmployee__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Similar Employee Profiles (Funcionário Semelhante)</relationshipLabel>
        <relationshipName>FuncionarioSemelhante</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceEmployee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relacionamento de pesquisa funcionário de origem.</description>
        <inlineHelpText>Funcionário de origem</inlineHelpText>
        <label>Source Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Similar Employee Profiles (Funcionário de Origem)</relationshipLabel>
        <relationshipName>FuncionarioOrigem</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Similar Employee Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>PerfilSemelhante</fullName>
        <columns>NAME</columns>
        <columns>SourceEmployee__c</columns>
        <columns>SimilarEmployee__c</columns>
        <columns>Function__c</columns>
        <filterScope>Mine</filterScope>
        <label>Perfil Semelhante</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Similar Profile Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Similar Employee Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>