pkg/objects/SimilarEmployeeProfile__c/listViews/PerfilSemelhante.listView-meta.xml
<ListView>
    <fullName>PerfilSemelhante</fullName>
    <columns>NAME</columns>
    <columns>SourceEmployee__c</columns>
    <columns>SimilarEmployee__c</columns>
    <columns>Function__c</columns>
    <filterScope>Mine</filterScope>
    <label>Perfil Semelhante</label>
</ListView>